--- a/latex/bib.bib
+++ b/latex/bib.bib
@@ -8,3 +8,340 @@
   year={2023},
   publisher={De Gruyter}
 }
+
+
+@article{lupyan2010language,
+  title={Language structure is partly determined by social structure},
+  author={Lupyan, Gary and Dale, Rick},
+  journal={PloS one},
+  volume={5},
+  number={1},
+  pages={e8559},
+  year={2010},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{liu2008dependency,
+  title={Dependency distance as a metric of language comprehension difficulty},
+  author={Liu, Haitao},
+  journal={Journal of Cognitive Science},
+  volume={9},
+  number={2},
+  pages={159--191},
+  year={2008}
+}
+
+@inproceedings{dyer2023revisiting,
+  title={Revisiting dependency length and intervener complexity minimisation on a parallel corpus in 35 languages},
+  author={Dyer, Andrew Thomas},
+  booktitle={Proceedings of the 5th Workshop on Research in Computational Linguistic Typology and Multilingual NLP},
+  pages={110--119},
+  year={2023}
+}
+
+
+@incollection{boas1938language,
+  author    = {Boas, Franz},
+  title     = {Language},
+  booktitle = {General Anthropology},
+  editor    = {Boas, Franz},
+  year      = {1938},
+  address   = {Boston, New York},
+  publisher = {D.S. Heath and Company}
+}
+
+@article{mcwhorter_2003,
+  author    = {McWhorter, J. H.},
+  title     = {Pidgins and creoles as models of language change: the state of the art},
+  journal   = {Annual Review of Applied Linguistics},
+  year      = {2003},
+  volume    = {23},
+  pages     = {202--212},
+}
+
+@article{frank2011insensitivity,
+  title={Insensitivity of the human sentence-processing system to hierarchical structure},
+  author={Frank, Stefan L and Bod, Rens},
+  journal={Psychological science},
+  volume={22},
+  number={6},
+  pages={829--834},
+  year={2011},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{hahn2021modeling,
+  title={Modeling word and morpheme order in natural language as an efficient trade-off of memory and surprisal.},
+  author={Hahn, Michael and Degen, Judith and Futrell, Richard},
+  journal={Psychological Review},
+  volume={128},
+  number={4},
+  pages={726},
+  year={2021},
+  publisher={American Psychological Association}
+}
+
+@article{ehret2023measuring,
+  title={Measuring language complexity: challenges and opportunities},
+  author={Ehret, Katharina and Berdicevskis, Aleksandrs and Bentz, Christian and Blumenthal-Dram{\'e}, Alice},
+  journal={Linguistics Vanguard},
+  volume={9},
+  number={s1},
+  pages={1--8},
+  year={2023},
+  publisher={De Gruyter}
+}
+
+@article{shcherbakova2023societies,
+  title={Societies of strangers do not speak less complex languages},
+  author={Shcherbakova, Olena and Michaelis, Susanne Maria and Haynie, Hannah J and Passmore, Sam and Gast, Volker and Gray, Russell D and Greenhill, Simon J and Blasi, Dami{\'a}n E and Skirg{\aa}rd, Hedvig},
+  journal={Science Advances},
+  volume={9},
+  number={33},
+  pages={eadf7704},
+  year={2023},
+  publisher={American Association for the Advancement of Science}
+}
+
+
+@article{hengeveld2018transparent,
+  title={Transparent and non-transparent languages},
+  author={Hengeveld, Kees and Leufkens, Sterre},
+  journal={Folia Linguistica},
+  volume={52},
+  number={1},
+  pages={139--175},
+  year={2018},
+  publisher={De Gruyter}
+}
+
+@article{gibson1998linguistic,
+  title={Linguistic complexity: Locality of syntactic dependencies},
+  author={Gibson, Edward},
+  journal={Cognition},
+  volume={68},
+  number={1},
+  pages={1--76},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@article{leufkens2023measuring,
+  title={Measuring redundancy: the relation between concord and complexity},
+  author={Leufkens, Sterre},
+  journal={Linguistics Vanguard},
+  volume={9},
+  number={s1},
+  pages={95--106},
+  year={2023},
+  publisher={De Gruyter}
+}
+
+@article{raviv2019larger,
+  title={Larger communities create more systematic languages},
+  author={Raviv, Limor and Meyer, Antje and Lev-Ari, Shiri},
+  journal={Proceedings of the Royal Society B},
+  volume={286},
+  number={1907},
+  pages={20191262},
+  year={2019},
+  publisher={The Royal Society}
+}
+
+@article{juola1998measuring,
+  title={Measuring linguistic complexity: The morphological tier},
+  author={Juola, Patrick},
+  journal={Journal of Quantitative Linguistics},
+  volume={5},
+  number={3},
+  pages={206--213},
+  year={1998},
+  publisher={Taylor \& Francis}
+}
+
+
+@inproceedings{round2022cognition,
+  title={Cognition and the stability of evolving complex morphology: an agent-based model},
+  author={Round, Erich AND Mann, Stephen and Beniamine, Sacha and Lindsay-Smith, Emily and Esher, Louise and Spike, Matt},
+  booktitle={The Evolution of Language: Proceedings of the Joint Conference on Language Evolution (JCoLE)},
+  pages={635--642},
+  year={2022},
+  organization={Joint Conference on Language Evolution (JCoLE)}
+}
+
+@inproceedings{spike2017population,
+  title={Population size, learning, and innovation determine linguistic complexity},
+  author={Spike, Matthew},
+  booktitle={Proceedings of the Annual Meeting of the Cognitive Science Society},
+  volume={39},
+  year={2017}
+}
+
+@misc{ud_2_feat_website, 
+url={https://universaldependencies.org/u/feat/index.html},
+author={de Marneffe, Marie  AND Filip Ginter AND Yoav Goldberg AND Jan Hajič AND Chris Manning AND Ryan McDonald AND Lori Levin AND Joakim Nivre AND Slav Petrov AND Sampo Pyysalo AND Nathan Schneider AND Sebastian Schuster AND Natalia Silveira AND Reut Tsarfaty AND Fran Tyers AND Amir Zeldes AND Dan Zeman},
+title={Universal features},
+year={2022-2024}
+}
+
+
+@article{kettunen2014can,
+  title={Can type-token ratio be used to show morphological complexity of languages?},
+  author={Kettunen, Kimmo},
+  journal={Journal of Quantitative Linguistics},
+  volume={21},
+  number={3},
+  pages={223--245},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+@article{aceves2024human,
+  title={Human languages with greater information density have higher communication speed but lower conversation breadth},
+  author={Aceves, Pedro and Evans, James A},
+  journal={Nature Human Behaviour},
+  volume={8},
+  number={4},
+  pages={644--656},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
+}
+
+
+@article{grambank_release, title = {Grambank reveals the importance of genealogical constraints on linguistic diversity and highlights the impact of language loss}, author = {Skirg{\aa}rd, Hedvig and Haynie, Hannah J. and Blasi, Dami{\'a}n E. and Hammarstr{\"o}m, Harald and Collins, Jeremy and Latarche, Jay J. and Lesage, Jakob and Weber, Tobias and Witzlack-Makarevich, Alena and Passmore, Sam and Chira, Angela and Maurits, Luke and Dinnage, Russell and Dunn, Michael and Reesink, Ger and Singer, Ruth and Bowern, Claire and Epps, Patience and Hill, Jane and Vesakoski, Outi and Robbeets, Martine and Abbas, Noor Karolin and Auer, Daniel and Bakker, Nancy A. and Barbos, Giulia and Borges, Robert D. and Danielsen, Swintha and Dorenbusch, Luise and Dorn, Ella and Elliott, John and Falcone, Giada and Fischer, Jana and Ghanggo Ate, Yustinus and Gibson, Hannah and G{\"o}bel, Hans-Philipp and Goodall, Jemima A. and Gruner, Victoria and Harvey, Andrew and Hayes, Rebekah and Heer, Leonard and Herrera Miranda, Roberto E. and H{\"u}bler, Nataliia and Huntington-Rainey, Biu and Ivani, Jessica K. and Johns, Marilen and Just, Erika and Kashima, Eri and Kipf, Carolina and Klingenberg, Janina V. and K{\"o}nig, Nikita and Koti, Aikaterina and Kowalik, Richard G. A. and Krasnoukhova, Olga and Lindvall, Nora L.M. and Lorenzen, Mandy and Lutzenberger, Hannah and Martins, T{\^o}nia R.A. and Mata German, Celia and van der  Meer, Suzanne and Montoya Samam{\'e}, Jaime and M{\"u}ller, Michael and Murado$\breve{g}$lu, Saliha and Neely, Kelsey and Nickel, Johanna and Norvik, Miina and Oluoch, Cheryl Akinyi and Peacock, Jesse and Pearey, India O.C. and Peck, Naomi and Petit, Stephanie and Pieper, S{\"o}ren and Poblete, Mariana and Prestipino, Daniel and Raabe, Linda and Raja, Amna and Reimringer, Janis and Rey, Sydney C. and Rizaew, Julia and Ruppert, Eloisa and Salmon, Kim K. and Sammet, Jill and Schembri, Rhiannon and Schlabbach, Lars and Schmidt, Frederick W.P. and Skilton, Amalia and Smith, Wikaliler Daniel and de  Sousa, Hil{\'a}rio and Sverredal, Kristin and Valle, Daniel and Vera, Javier and Vo{\ss}, Judith and Witte, Tim and Wu, Henry and Yam, Stephanie and Ye 葉婧婷, Jingting and Yong, Maisie and Yuditha, Tessa and Zariquiey, Roberto and Forkel, Robert and Evans, Nicholas and Levinson, Stephen C. and Haspelmath, Martin and Greenhill, Simon J. and Atkinson, Quentin D. and Gray, Russell D.}, year = {2023}, volume={9}, doi={10.1126/sciadv.adg6175}, issue={16},  journal = {Science Advances} } 
+
+
+ @misc{UD_2.14,
+ title = {Universal Dependencies 2.14},
+ author = {Zeman, Daniel and Nivre, Joakim and Abrams, Mitchell and Ackermann, Elia and Aepli, No{\"e}mi and Aghaei, Hamid and Agi{\'c}, {\v Z}eljko and Ahmadi, Amir and Ahrenberg, Lars and Ajede, Chika Kennedy and Akkurt,
+ Salih Furkan and Aleksandravi{\v c}i{\=u}t{\.e}, Gabriel{\.e} and Alfina, Ika and Algom, Avner and Alnajjar, Khalid and Alzetta, Chiara and Andersen, Erik and Antonsen, Lene and Aoyama, Tatsuya and Aplonova, Katya and Aquino, Angelina and Aragon, Carolina and Aranes, Glyd and Aranzabe, Maria Jesus and Ar{\i}can, Bilge Nas and Arnard{\'o}ttir, {\t H}{\'o}runn and Arutie, Gashaw and Arwidarasti, Jessica Naraiswari and Asahara, Masayuki and {\'A}sgeirsd{\'o}ttir, Katla and Aslan, Deniz Baran and Asmazo{\u g}lu, Cengiz and Ateyah, Luma and Atmaca, Furkan and Attia, Mohammed and Atutxa, Aitziber and Augustinus, Liesbeth and Avel{\~a}s, Mariana and Badmaeva, Elena and Balasubramani, Keerthana and Ballesteros, Miguel and Banerjee, Esha and Bank, Sebastian and Barbu Mititelu, Verginica and Barkarson, Starka{\dh}ur and Basile, Rodolfo and Basmov, Victoria and Batchelor, Colin and Bauer, John and Bedir, Seyyit Talha and Behzad, Shabnam and Belieni, Juan and Bengoetxea, Kepa and Benli, İbrahim and Ben Moshe, Yifat and Berg, Ansu and Berk, G{\"o}zde and Bhat, Riyaz Ahmad and Biagetti, Erica and Bick, Eckhard and Bielinskien{\.e}, Agn{\.e} and Bilgin Ta{\c s}demir, Esma Fat{\i}ma and Bjarnad{\'o}ttir, Krist{\'{\i}}n and Blaschke, Verena and Blokland, Rogier and Bobicev, Victoria and Boizou, Lo{\"{\i}}c and Bonilla, Johnatan and Borges V{\"o}lker, Emanuel and B{\"o}rstell, Carl and Bosco, Cristina and Bouma, Gosse and Bowman, Sam and Boyd, Adriane and Braggaar, Anouck and Branco, Ant{\'o}nio and Brokait{\.e}, Kristina and Burchardt, Aljoscha and Campos, Marisa and Candito, Marie and Caron, Bernard and Caron, Gauthier and Carvalheiro, Catarina and Carvalho, Rita and Cassidy, Lauren and Castro, Maria Clara and Castro, S{\'e}rgio and Cavalcanti, Tatiana and Cebiro{\u g}lu Eryi{\u g}it, G{\"u}l{\c s}en and Cecchini, Flavio Massimiliano and Celano, Giuseppe G. A. and {\v C}{\'e}pl{\"o}, Slavom{\'{\i}}r and Cesur, Neslihan and Cetin, Savas and {\c C}etino{\u g}lu, {\"O}zlem and Chalub, Fabricio and Chamila, Liyanage and Chauhan, Shweta and Chen, Yifei and Chi, Ethan and Chika, Taishi and Cho, Yongseok and Choi, Jinho and Chontaeva, Bermet and Chun, Jayeol and Chung, Juyeon and Cignarella, Alessandra T. and Cinkov{\'a}, Silvie and Collomb, Aur{\'e}lie and {\c C}{\"o}ltekin, {\c C}a{\u g}r{\i} and Connor, Miriam and Corbetta, Claudia and Corbetta, Daniela and Costa, Francisco and Courtin, Marine and Crabb{\'e}, Beno{\^{\i}}t and Cristescu, Mihaela and Cvetkoski, Vladimir and Dale, Ingerid L{\o}yning and Daniel, Philemon and Davidson, Elizabeth and de Alencar, Leonel Figueiredo and Dehouck, Mathieu and de Laurentiis, Martina and de Marneffe, Marie-Catherine and de Paiva, Valeria and Derin, Mehmet Oguz and de Souza, Elvis and Diaz de Ilarraza, Arantza and D{\'{\i}}az Hern{\'a}ndez, Roberto Antonio and Dickerson, Carly and Dinakaramani, Arawinda and Di Nuovo, Elisa and Dione, Bamba and Dirix, Peter and Do, Hoa and Dobrovoljc, Kaja and D{\"o}hmer, Caroline and Doyle, Adrian and Dozat, Timothy and Droganova, Kira and Duran, Magali Sanches and Dwivedi, Puneet and Ebert, Christian and Eckhoff, Hanne and Eguchi, Masaki and Eiche, Sandra and Eiselen, Roald and Eli, Marhaba and Elkahky, Ali and Ephrem, Binyam and Erina, Olga and Erjavec, Toma{\v z} and Eslami, Soudabeh and Essaidi, Farah and Etienne, Aline and Evelyn, Wograine and Facundes, Sidney and Farkas, Rich{\'a}rd and Favero, Federica and Ferdaousi, Jannatul and Fernanda, Mar{\'{\i}}lia and Fernandez Alcalde, Hector and Fethi, Amal and Foster, Jennifer and Fransen, Theodorus and Freitas, Cl{\'a}udia and Fujita, Kazunori and Gajdo{\v s}ov{\'a}, Katar{\'{\i}}na and Galbraith, Daniel and Galy, Edith and Gamba, Federica and Garcia, Marcos and G{\"a}rdenfors, Moa and Gaustad, Tanja and Gen{\c c}, Efe Eren and Gerardi, Fabr{\'{\i}}cio Ferraz and Gerdes, Kim and Gessler, Luke and Ginter, Filip and Godoy, Gustavo and Goenaga, Iakes and Gojenola, Koldo and G{\"o}k{\i}rmak, Memduh and Goldberg, Yoav and G{\'o}mez Guinovart, Xavier and Gonz{\'a}lez Saavedra,
+ Berta and Grici{\=u}t{\.e}, Bernadeta and Grioni, Matias and Grobol,
+ Lo{\"{\i}}c and Gr{\=
+u}z{\={\i}}tis, Normunds and Guillaume, Bruno and Guiller, Kirian and Guillot-Barbance, C{\'e}line and G{\"u}ng{\"o}r, Tunga and Habash, Nizar and Hafsteinsson, Hinrik and Haji{\v c}, Jan and Haji{\v c} jr., Jan and H{\"a}m{\"a}l{\"a}inen, Mika and H{\`a} M{\~y}, Linh and Han, Na-Rae and Hanifmuti, Muhammad Yudistira and Harada, Takahiro and Hardwick, Sam and Harris, Kim and Hassert, Na{\"{\i}}ma and Haug, Dag and Heinecke, Johannes and Hellwig, Oliver and Hennig, Felix and Hladk{\'a}, Barbora and Hlav{\'a}{\v c}ov{\'a}, Jaroslava and Hociung, Florinel and Hoefels, Diana and Hohle, Petter and Huang, Yidi and Huerta Mendez, Marivel and Hwang, Jena and Ikeda, Takumi and Iliadou, Inessa and Ingason, Anton Karl and Ion, Radu and Irimia, Elena and Ishola, {\d O}l{\'a}j{\'{\i}}d{\'e} and Islamaj, Artan and Ito, Kaoru and Iurescia, Federica and Jagodzi{\'n}ska, Sandra and Jannat, Siratun and Jel{\'{\i}}nek, Tom{\'a}{\v s} and Jha, Apoorva and Jiang, Katharine and Jobanputra, Mayank and Johannsen, Anders and J{\'o}nsd{\'o}ttir, Hildur and J{\o}rgensen, Fredrik and Juutinen, Markus and Ka{\c s}{\i}kara, H{\"u}ner and Kabaeva, Nadezhda and Kahane, Sylvain and Kanayama, Hiroshi and Kanerva, Jenna and Kara, Neslihan and Karah{\'o}ǧa, Ritv{\'a}n and K{\aa}sen, Andre and Kayadelen, Tolga and Kengatharaiyer, Sarveswaran and Kettnerov{\'a}, V{\'a}clava and Kharatyan, Lilit and Kirchner, Jesse and Klementieva, Elena and Klyachko, Elena and Kocharov, Petr and K{\"o}hn, Arne and K{\"o}ksal, Abdullatif and Kopacewicz, Kamil and Korkiakangas, Timo and K{\"o}se, Mehmet and Koshevoy, Alexey and Kotsyba, Natalia and Kova{\v c}i{\'c}, Barbara and Kovalevskait{\.e}, Jolanta and Krek, Simon and Krishnamurthy, Parameswari and K{\"u}bler, Sandra and Kuqi, Adrian and Kuyruk{\c c}u, O{\u g}uzhan and Kuzgun, Asl{\i} and Kwak, Sookyoung and Kyle, Kris and Laan, K{\"a}bi and Laippala, Veronika and Lambertino, Lorenzo and Lando, Tatiana and Larasati, Septina Dian and Lavrentiev, Alexei and Lee, John and L{\^e} H{\`{\^o}}ng, Phương and Lenci, Alessandro and Lertpradit, Saran and Leung, Herman and Levina, Maria and Levine, Lauren and Li, Cheuk Ying and Li, Josie and Li, Keying and Li, Yixuan and Li, Yuan and Lim, {KyungTae} and Lima Padovani, Bruna and Lin, Yi-Ju Jessica and Lind{\'e}n, Krister and Liu, Yang Janet and Ljube{\v s}i{\'c}, Nikola and Lobzhanidze, Irina and Loginova, Olga and Lopes, Lucelene and Lusito, Stefano and Lutgen, Anne-Marie and Luthfi, Andry and Luukko, Mikko and Lyashevskaya, Olga and Lynn, Teresa and Macketanz, Vivien and Mahamdi, Menel and Maillard, Jean and Makarchuk, Ilya and Makazhanov, Aibek and Mambrini, Francesco and Mandl, Michael and Manning, Christopher and Manurung, Ruli and Mar{\c s}an, B{\"u}{\c s}ra and M{\u a}r{\u a}nduc, C{\u a}t{\u a}lina and Mare{\v c}ek, David and Marheinecke, Katrin and Markantonatou, Stella and Mart{\'{\i}}nez Alonso, H{\'e}ctor and Mart{\'{\i}}n Rodr{\'{\i}}guez, Lorena and Martins, Andr{\'e} and Martins, Cl{\'a}udia and Ma{\v s}ek, Jan and Matsuda, Hiroshi and Matsumoto, Yuji and Mazzei, Alessandro and {McDonald}, Ryan and {McGuinness}, Sarah and Mehta, Maitrey and M{\'e}nard, Pierre Andr{\'e} and Mendon{\c c}a, Gustavo and Merzhevich, Tatiana and Meurer, Paul and Miekka, Niko and Milano, Emilia and Miller, Aaron and Mischenkova, Karina and Missil{\"a}, Anna and Mititelu, C{\u a}t{\u a}lin and Mitrofan, Maria and Miyao, Yusuke and Mojiri Foroushani, {AmirHossein} and Moln{\'a}r, Judit and Moloodi, Amirsaeid and Montemagni, Simonetta and More, Amir and Moreno Romero, Laura and Moretti, Giovanni and Mori, Shinsuke and Morioka, Tomohiko and Moro, Shigeki and Mortensen, Bjartur and Moskalevskyi, Bohdan and Muischnek, Kadri and Munro, Robert and Murawaki, Yugo and M{\"u}{\"u}risep, Kaili and Nainwani, Pinkey and Nakhl{\'e}, Mariam and Navarro Hor{\~n}iacek, Juan Ignacio and Nedoluzhko,
+ Anna and Ne{\v s}pore-B{\=e}rzkalne, Gunta and Nevaci, Manuela and Nguy{\~{\^e}}n Th{\d i}, Lương and Nguy{\~{\^e}}n Th{\d i} Minh, Huy{\`{\^e}}n and Nikaido, Yoshihiro and Nikolaev, Vitaly and Nitisaroj, Rattima and Norrman, Victor and Nourian, Alireza and Nunes, Maria das Gra{\c c}as Volpe and Nurmi, Hanna and Ojala, Stina and Ojha, Atul Kr. and {\'O}lad{\'o}ttir, Hulda and Ol{\'u}{\`o}kun, Ad{\'e}day{\d o}̀ and Omura, Mai and Onwuegbuzia, Emeka and Ordan, Noam and Osenova, Petya and {\"O}stling, Robert and Ott, Annika and {\O}vrelid, Lilja and {\"O}zate{\c s}, {\c S}aziye Bet{\"u}l and {\"O}z{\c c}elik, Merve and {\"O}zg{\"u}r, Arzucan and {\"O}zt{\"u}rk Ba{\c s}aran, Balk{\i}z and Paccosi, Teresa and Palmero Aprosio, Alessio and Panova, Anastasia and Pardo, Thiago Alexandre Salgueiro and Park, Hyunji Hayley and Partanen, Niko and Pascual, Elena and Passarotti, Marco and Patejuk, Agnieszka and Paulino-Passos, Guilherme and Pedonese, Giulia and Peljak-{\L}api{\'n}ska, Angelika and Peng, Siyao and Peng, Siyao Logan and Pereira, Rita and Pereira, S{\'{\i}}lvia and Perez, Cenel-Augusto and Perkova, Natalia and Perrier, Guy and Petrov, Slav and Petrova, Daria and Peverelli, Andrea and Phelan, Jason and Pierre-Louis, Claudel and Piitulainen, Jussi and Pinter, Yuval and Pinto, Clara and Pintucci, Rodrigo and Pirinen, Tommi A and Pitler, Emily and Plamada, Magdalena and Plank, Barbara and Plum, Alistair and Poibeau, Thierry and Ponomareva, Larisa and Popel, Martin and Pretkalni{\c n}a, Lauma and Pretorius, Rigardt and Pr{\'e}vost, Sophie and Prokopidis, Prokopis and Przepi{\'o}rkowski, Adam and Pugh, Robert and Puolakainen, Tiina and Purschke, Christoph and Pyysalo, Sampo and Qi, Peng and Querido, Andreia and R{\"a}{\"a}bis, Andriela and Rademaker, Alexandre and Rahoman, Mizanur and Rama, Taraka and Ramasamy, Loganathan and Ramisch, Carlos and Ramos, Joana and Rashel, Fam and Rasooli, Mohammad Sadegh and Ravishankar, Vinit and Real, Livy and Rebeja, Petru and Reddy, Siva and Regnault, Mathilde and Rehm, Georg and Riabi, Arij and Riabov, Ivan and Rie{\ss}ler, Michael and Rimkut{\.e}, Erika and Rinaldi, Larissa and Rituma, Laura and Rizqiyah, Putri and Rocha, Luisa and R{\"o}gnvaldsson, Eir{\'{\i}}kur and Roksandic, Ivan and Romanenko, Mykhailo and Rosa, Rudolf and Roșca, Valentin and Rovati, Davide and Rozonoyer, Ben and Rudina, Olga and Rueter, Jack and Ruffolo, Paolo and R{\'u}narsson, Kristj{\'a}n and Sadde, Shoval and Safari, Pegah and Sahala, Aleksi and Saleh, Shadi and Salomoni, Alessio and Samard{\v z}i{\'c}, Tanja and Samson, Stephanie and S{\'a}nchez-Rodr{\'{\i}}guez, Xulia and Sanguinetti, Manuela and San{\i}yar, Ezgi and S{\"a}rg, Dage and Sartor, Marta and Sarymsakova, Albina and Sasaki,
+ Mitsuya and Saul{\={\i}}te, Baiba and Savary, Agata and Sawanakunanon, Yanin and Saxena, Shefali and Scannell, Kevin and Scarlata, Salvatore and Schang, Emmanuel and Schneider, Nathan and Schuster, Sebastian and Schwartz, Lane and Seddah, Djam{\'e} and Seeker, Wolfgang and Sellmer, Sven and Seraji, Mojgan and Shahzadi, Syeda and Shen, Mo and Shimada, Atsuko and Shirasu, Hiroyuki and Shishkina, Yana and Shohibussirri, Muh and Shvedova, Maria and Siewert, Janine and Sigur{\dh}sson, Einar Freyr and Silva, Jo{\~a}o and Silveira, Aline and Silveira, Natalia and Silveira, Sara and Simi, Maria and Simionescu, Radu and Simk{\'o}, Katalin and {\v S}imkov{\'a}, M{\'a}ria and S{\'{\i}}monarson, Haukur Barri and Simov, Kiril and Sitchinava, Dmitri and Sither, Ted and Smith, Aaron and Soares-Bastos, Isabela and Solberg, Per Erik and Sonnenhauser, Barbara and Sourov, Shafi and Sprugnoli, Rachele and Stamou, Vivian and Steingr{\'{\i}}msson, Stein{\t h}{\'o}r and Stella, Antonio and Stephen, Abishek and Straka, Milan and Strickland, Emmett and Strnadov{\'a}, Jana and Suhr, Alane and Sulestio, Yogi Lesmana and Sulubacak, Umut and Suzuki, Shingo and Swanson, Daniel and Sz{\'a}nt{\'o}, Zsolt and Taguchi, Chihiro and Taji, Dima and Tamburini, Fabio and Tan, Mary Ann C. and Tanaka, Takaaki and Tanaya, Dipta and Tavoni, Mirko and Tella, Samson and Tellier, Isabelle and Testori, Marinella and Thomas, Guillaume and T{\i}ra{\c s}, Tar{\i}k Emre and Tonelli, Sara and Torga, Liisi and Toska, Marsida and Trosterud, Trond and Trukhina, Anna and Tsarfaty, Reut and T{\"u}rk, Utku and Tyers, Francis and {\t H}{\'o}r{\dh}arson, Sveinbj{\"o}rn and {\t H}orsteinsson, Vilhj{\'a}lmur and Uematsu, Sumire and Untilov, Roman and Ure{\v s}ov{\'a}, Zde{\v n}ka and Uria, Larraitz and Uszkoreit, Hans and Utka, Andrius and Vagnoni, Elena and Vajjala, Sowmya and Vak, Socrates and van der Goot, Rob and Vanhove, Martine and van Niekerk, Daniel and van Noord, Gertjan and Varga, Viktor and Vedenina, Uliana and Venturi, Giulia and Villemonte de la Clergerie, Eric and Vincze, Veronika and Vissamsetty, Anishka and Vlasova, Natalia and Vligouridou, Eleni and Wakasa, Aya and Wallenberg, Joel C. and Wallin, Lars and Walsh, Abigail and Wang, John and Washington, Jonathan North and Wendt, Maximilan and Widmer, Paul and Wigderson, Shira and Wijono, Sri Hartati and Wille, Vanessa Berwanger and Williams, Seyi and Wir{\'e}n, Mats and Wittern, Christian and Woldemariam, Tsegay and Wong, Tak-sum and Wr{\'o}blewska, Alina and Wu, Qishen and Yako, Mary and Yamashita, Kayo and Yamazaki, Naoki and Yan, Chunxiao and Yasuoka, Koichi and Yavrumyan, Marat M. and Yenice, Arife Bet{\"u}l and Y{\i}landilo{\u g}lu, Enes and Y{\i}ld{\i}z, Olcay Taner and Yu, Zhuoran and Yuliawati, Arlisa and {\v Z}abokrtsk{\'y}, Zden{\v e}k and Zahra, Shorouq and Zeldes, Amir and Zhou, He and Zhu, Hanzhi and Zhu, Yilun and Zhuravleva, Anna and Ziane, Rayan},
+ url = {http://hdl.handle.net/11234/1-5502},
+ note = {{LINDAT}/{CLARIAH}-{CZ} digital library at the Institute of Formal and Applied Linguistics ({{\'U}FAL}), Faculty of Mathematics and Physics, Charles University},
+ copyright = {Licence Universal Dependencies v2.14},
+ year = {2024} }
+
+
+@article{wray2007consequences,
+  title={The consequences of talking to strangers: Evolutionary corollaries of socio-cultural influences on linguistic form},
+  author={Wray, Alison and Grace, George W},
+  journal={Lingua},
+  volume={117},
+  number={3},
+  pages={543--578},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@book{dahl2004growth,
+  author    = {Dahl, Östen},
+  title     = {The Growth and Maintenance of Linguistic Complexity},
+  year      = {2004},
+  publisher = {The Growth and Maintenance of Linguistic Complexity},
+  pages     = {1--343}
+}
+
+@article{bentz2013languages,
+  title={Languages with more second language learners tend to lose nominal case},
+  author={Bentz, Christian and Winter, Bodo},
+  journal={Language Dynamics and Change},
+  volume={3},
+  number={1},
+  pages={1--27},
+  year={2013},
+  publisher={Brill}
+}
+
+@article{cotterell2019complexity,
+  title={On the complexity and typology of inflectional morphological systems},
+  author={Cotterell, Ryan and Kirov, Christo and Hulden, Mans and Eisner, Jason},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={7},
+  pages={327--342},
+  year={2019},
+  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+}
+
+@article{schnell2022crosslinguistic,
+  title={Crosslinguistic corpus studies in linguistic typology},
+  author={Schnell, Stefan and Schiborr, Nils Norman},
+  journal={Annual Review of Linguistics},
+  volume={8},
+  number={1},
+  pages={171--191},
+  year={2022},
+  publisher={Annual Reviews}
+}
+
+@inproceedings{lupyan2024cautionary,
+  title={A cautionary note on sociodemographic predictors of linguistic complexity: Different measures and different analyses lead to different conclusions},
+  author={Lupyan, Gary and Raviv, Limor},
+  booktitle={15th International Conference on the Evolution of Language (EVOLANG)},
+  pages={345--348},
+  year={2024},
+  organization={The Evolution of Language Conferences}
+}
+
+@article{koplenig2019language,
+  title={Language structure is influenced by the number of speakers but seemingly not by the proportion of non-native speakers},
+  author={Koplenig, Alexander},
+  journal={Royal Society open science},
+  volume={6},
+  number={2},
+  pages={181274},
+  year={2019},
+  publisher={The Royal Society}
+}
+
+@article{bentz2015adaptive,
+  title={Adaptive communication: Languages with more non-native speakers tend to have fewer word forms},
+  author={Bentz, Christian and Verkerk, Annemarie and Kiela, Douwe and Hill, Felix and Buttery, Paula},
+  journal={PloS one},
+  volume={10},
+  number={6},
+  pages={e0128254},
+  year={2015},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@incollection{tamariz2008regularity,
+  title={Regularity in mappings between signals and meanings},
+  author={Tamariz, Monica and Smith, Andrew DM},
+  booktitle={The Evolution Of Language},
+  pages={315--322},
+  year={2008},
+  publisher={World Scientific}
+}
+
+@inproceedings{bentz2016comparison,
+  title={A comparison between morphological complexity measures: typological data vs. language corpora},
+  author={Bentz, Christian and Ruzsics, Tatyana and Koplenig, Alexander and Samardzic, Tanja},
+  booktitle={Proceedings of the workshop on computational linguistics for linguistic complexity (CL4LC)},
+  pages={142--153},
+  year={2016}
+} %https://aclanthology.org/W16-4117.pdf
+
+@article{koplenig2023languages,
+  title={Languages with more speakers tend to be harder to (machine-) learn},
+  author={Koplenig, Alexander and Wolfer, Sascha},
+  journal={Scientific Reports},
+  volume={13},
+  number={1},
+  pages={18521},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{ehret2021information,
+  title={An information-theoretic view on language complexity and register variation: Compressing naturalistic corpus data},
+  author={Ehret, Katharina},
+  journal={Corpus Linguistics and Linguistic Theory},
+  volume={17},
+  number={2},
+  pages={383--410},
+  year={2021},
+  publisher={De Gruyter}
+}
