Ste on Coltekin and Rama

--- a/latex/bib.bib
+++ b/latex/bib.bib
@@ -169,6 +169,21 @@
   organization={Joint Conference on Language Evolution (JCoLE)}
 }
 
+@INPROCEEDINGS{kuzgun_2020_UD_turkish_penn,
+  author={Kuzgun, Aslı and Cesur, Neslihan and Arıcan, Bilge Nas and Özçelik, Merve and Marşan, Büşra and Kara, Neslihan and Aslan, Deniz Baran and Yıldız, Olcay Taner},
+  booktitle={2020 Innovations in Intelligent Systems and Applications Conference (ASYU)}, 
+  title={On Building the Largest and Cross-Linguistic Turkish Dependency Corpus}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={1-6},
+  abstract={In this paper, we aim to introduce the dependency annotation process of the largest and the only cross-linguistic Turkish dependency treebank which was translated from the original Penn Treebank corpus. Within the scope of this project, 16.400 sentences have been morphologically and semantically annotated, and the dependency relations were manually carried out by a team of linguists. It is hoped that this project will serve as a base for a successful dependency parser and a system which can automatically perform the bi-directional conversion between constituency and dependency trees.},
+  keywords={Annotations;Linguistics;Natural language processing;Standards;Grammar;Syntactics;Semantics;Dependency;TreeBank;Dependency Parsing},
+  doi={10.1109/ASYU50717.2020.9259799},
+  ISSN={},
+  month={Oct},}
+
+
 @inproceedings{spike2017population,
   title={Population size, learning, and innovation determine linguistic complexity},
   author={Spike, Matthew},
